@@ -1,26 +1,30 @@
 package de.uni_hannover.hci.turing_machine;
 
 import javafx.application.Application;
+import javafx.fxml.FXML;
+import javafx.fxml.FXMLLoader;
+import javafx.scene.Parent;
+import javafx.scene.Scene;
+import javafx.stage.Stage;
+
 import javafx.event.ActionEvent;
 import javafx.event.EventHandler;
-import javafx.fxml.FXML;
 import javafx.scene.control.Button;
 import javafx.scene.control.TableView;
 import javafx.scene.control.TextField;
-import javafx.scene.Scene;
 import javafx.scene.paint.Color;
 import javafx.scene.text.Font;
-import javafx.stage.Stage;
 import javafx.scene.layout.StackPane;
 
+// VM options: --module-path %PATH_TO_FX%  --add-modules=javafx.controls,javafx.fxml
 
 public class App extends Application {
 
     @Override
     public void start(Stage primaryStage) throws Exception{
-        Parent root = FXMLLoader.load(getClass().getResource("GUI.fxml"));
+        Parent root = FXMLLoader.load(getClass().getResource("../../resources/GUI.fxml"));
         primaryStage.setTitle("Turing Machine");
-        primaryStage.setScene(new Scene(root, 300, 275));
+        primaryStage.setScene(new Scene(root, 1280, 800));
         primaryStage.show();
     }
 
@@ -29,4 +33,3 @@ public class App extends Application {
         launch(args);
     }
 }
-
